--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -100,26 +100,12 @@
                     <a href="/TIN-TUC">Tin Tức</a>
                   </li>
                   <li>
-                    <a href="blog-grid.html">Hình Ảnh</a>
-                    <ul>
-                      <li><a href="blog-grid.html">Ảnh Cosplay</a></li>
-                      <li><a href="blog-left-sidebar.html">Ảnh Game</a></li>
-                      <li><a href="blog-right-sidebar.html">Ảnh Cộng Đồng</a></li>
-                      <li><a href="blog-details.html">Meme</a></li>
-                    </ul>
+                    <a href="/HINH-ANH">Hình Ảnh</a>
                   </li>
                   <li>
-                    <a href="404-page.html">Hướng Dẫn Build Team</a>
-                    <ul>
-                      <li><a href="404-page.html">404 page</a></li>
-                      <li><a href="faq.html">FAQs</a></li>
-                      <li><a href="pricing-table.html">pricing table</a></li>
-                      <li><a href="gallery.html">Gallery</a></li>
-                      <li><a href="team.html">team Page</a></li>
-                      <li><a href="single-team-page.html">Single team Page</a></li>
-                    </ul>
+                    <a href="/BUILD-TEAM">Hướng Dẫn Build Team</a>
                   </li>
-                  <li><a href="contact.html">feedback</a></li>
+                  <li><a href="/FEEDBACK">feedback</a></li>
                 </ul>
               </nav>
             </div>
